--- a/boards/shields/dongle_display/dongle_display.conf
+++ b/boards/shields/dongle_display/dongle_display.conf
@@ -15,5 +15,5 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 # 키보드의 BLE 무선 전송 전력을 증가시켜 지연 및 좌우 통신 불량 문제를 해결합니다
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # 키보드 기본 표시 이름 변경
-CONFIG_ZMK_KEYBOARD_NAME="Lily58"
+CONFIG_ZMK_KEYBOARD_NAME="Sofle_v2"
 CONFIG_ZMK_MOUSE=y
