인코더 설정 추가

--- a/boards/shields/sofle_v2/sofle_v2_central_dongle.conf
+++ b/boards/shields/sofle_v2/sofle_v2_central_dongle.conf
@@ -31,4 +31,8 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=3
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # 키보드 기본 표시 이름 변경
 CONFIG_ZMK_KEYBOARD_NAME="Sofle_V2"
+# 마우스 설정
 CONFIG_ZMK_MOUSE=y
+# 인코더 설정
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
